--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,3 +8,18 @@ body {
   margin: 0;
   padding: 0;
 }
+
+button {
+  width: fit-content;
+  font-family: inherit;
+  background-color: rgb(34, 34, 34);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 7px 20px;
+}
+
+button:hover {
+  background-color: rgb(89, 89, 89);
+  cursor: pointer;
+}
