--- a/app/src/styles/Form.css
+++ b/app/src/styles/Form.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   display: flex;
   justify-content: center;
   margin: 30px 0;
@@ -31,20 +31,10 @@
 }
 
 .form button {
-  margin-top: 25px;
-  border-radius: 6px;
-  border: none;
-  background-color: rgb(33, 92, 182);
-  color: white;
-  font-family: inherit;
-  padding: 6px 0;
-  font-size: large;
-}
-.form button:hover {
-  cursor: pointer;
-  background-color: rgb(62, 122, 213);
+  margin-top: 15px;
+  font-size: 18px;
 }
 
 .form span {
   color: tomato;
-}
+} */
